* Fixed info-start p tag wrapping

--- a/_sass/info.scss
+++ b/_sass/info.scss
@@ -77,7 +77,6 @@ hr {
   }
 
   p {
-    width: 60%;
     font-size: 1.7rem;
 
     .join {
